; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/input/keyboard/extr_lm8323.c_pwm_done.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/input/keyboard/extr_lm8323.c_pwm_done.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lm8323_pwm = type { i32, i64, i64, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.lm8323_pwm*)* @pwm_done to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pwm_done(%struct.lm8323_pwm* %0) #0 {
  %2 = alloca %struct.lm8323_pwm*, align 8
  store %struct.lm8323_pwm* %0, %struct.lm8323_pwm** %2, align 8
  %3 = load %struct.lm8323_pwm*, %struct.lm8323_pwm** %2, align 8
  %4 = getelementptr inbounds %struct.lm8323_pwm, %struct.lm8323_pwm* %3, i32 0, i32 3
  %5 = call i32 @mutex_lock(i32* %4)
  %6 = load %struct.lm8323_pwm*, %struct.lm8323_pwm** %2, align 8
  %7 = getelementptr inbounds %struct.lm8323_pwm, %struct.lm8323_pwm* %6, i32 0, i32 0
  store i32 0, i32* %7, align 8
  %8 = load %struct.lm8323_pwm*, %struct.lm8323_pwm** %2, align 8
  %9 = getelementptr inbounds %struct.lm8323_pwm, %struct.lm8323_pwm* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = load %struct.lm8323_pwm*, %struct.lm8323_pwm** %2, align 8
  %12 = getelementptr inbounds %struct.lm8323_pwm, %struct.lm8323_pwm* %11, i32 0, i32 2
  %13 = load i64, i64* %12, align 8
  %14 = icmp ne i64 %10, %13
  br i1 %14, label %15, label %19

15:                                               ; preds = %1
  %16 = load %struct.lm8323_pwm*, %struct.lm8323_pwm** %2, align 8
  %17 = getelementptr inbounds %struct.lm8323_pwm, %struct.lm8323_pwm* %16, i32 0, i32 4
  %18 = call i32 @schedule_work(i32* %17)
  br label %19

19:                                               ; preds = %15, %1
  %20 = load %struct.lm8323_pwm*, %struct.lm8323_pwm** %2, align 8
  %21 = getelementptr inbounds %struct.lm8323_pwm, %struct.lm8323_pwm* %20, i32 0, i32 3
  %22 = call i32 @mutex_unlock(i32* %21)
  ret void
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @schedule_work(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
